Update JVM.md